[gd_scene load_steps=15 format=3 uid="uid://crbdrdd6h88ri"]

[ext_resource type="Script" path="res://Scripts/GameMenu.gd" id="1_lsehf"]
[ext_resource type="Texture2D" uid="uid://dauv2gl5cwal1" path="res://Assets/game_menu_mockup.png" id="1_o10lf"]
[ext_resource type="StyleBox" uid="uid://dkpsgdqk7lt1b" path="res://Resources/BluePanelStyleBox.tres" id="2_fdtve"]
[ext_resource type="FontFile" uid="uid://dq16on1ky5x77" path="res://Assets/Fonts/kenvector_future.ttf" id="3_it2k0"]
[ext_resource type="StyleBox" uid="uid://cu7mjnkainsio" path="res://Resources/GreyPanelStyleBox.tres" id="4_pt7a8"]
[ext_resource type="FontFile" uid="uid://ipie7hfhbd3y" path="res://Assets/Fonts/kenvector_future_thin.ttf" id="5_6ifg0"]
[ext_resource type="StyleBox" uid="uid://d35vqsenkqmm2" path="res://Resources/UI/NormalButtonYellow.tres" id="6_1u22w"]
[ext_resource type="StyleBox" uid="uid://di4m636fi1ur" path="res://Resources/UI/PressedButtonYellow.tres" id="7_2yj0w"]
[ext_resource type="Texture2D" uid="uid://dgd3xxxuj6kco" path="res://Assets/Icons/White/multiplayer.png" id="8_xofqc"]
[ext_resource type="StyleBox" uid="uid://useodixb5vtv" path="res://Resources/UI/NormalButtonBlue.tres" id="9_f3iua"]
[ext_resource type="StyleBox" uid="uid://d0e0msv43h3yh" path="res://Resources/UI/PressedButtonBlue.tres" id="10_brud0"]
[ext_resource type="Texture2D" uid="uid://6rkiiwelvk7l" path="res://Assets/Icons/White/wrench.png" id="11_kryr0"]
[ext_resource type="Texture2D" uid="uid://bxm82txkqxi7s" path="res://Assets/Icons/White/star.png" id="12_y2384"]
[ext_resource type="AudioStream" uid="uid://cvh1ohy3ga445" path="res://Assets/SFX/click1.ogg" id="14_b6onx"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lsehf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o10lf")
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -100.5
offset_right = 145.5
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_fdtve")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_it2k0")
theme_override_font_sizes/font_size = 24
text = "Awesome Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("4_pt7a8")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_6ifg0")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("6_1u22w")
theme_override_styles/hover = ExtResource("6_1u22w")
theme_override_styles/pressed = ExtResource("7_2yj0w")
text = "Join Game"
icon = ExtResource("8_xofqc")
icon_alignment = 2
expand_icon = true

[node name="OptionsButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_6ifg0")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("9_f3iua")
theme_override_styles/hover = ExtResource("9_f3iua")
theme_override_styles/pressed = ExtResource("10_brud0")
text = "Options"
icon = ExtResource("11_kryr0")
icon_alignment = 2
expand_icon = true

[node name="CreditsButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_6ifg0")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("9_f3iua")
theme_override_styles/hover = ExtResource("9_f3iua")
theme_override_styles/pressed = ExtResource("10_brud0")
text = "Credits"
icon = ExtResource("12_y2384")
icon_alignment = 2
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_b6onx")

[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
